# transcodertomp3

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AudioConverter.cpp  AudioConverter.h  AudioConverterThread.cpp  AudioConverterThread.h  AudioWorker.cpp  AudioWorker.h  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  ConverterThread.cpp  ConverterThread.h  FSUtils.cpp  FSUtils.h  MP3Converter.cpp  MP3Converter.h  MP3Worker.cpp  MP3Worker.h  Main.cpp  ModuleConverter.cpp  ModuleConverter.h  ModuleWorker.cpp  ModuleWorker.h  MusicConverter.cpp  MusicConverter.h  MusicConverter.ui  MusicTranscoder.cpp  MusicTranscoder.h  MusicTranscoder.ui  OggConverter.cpp  OggConverter.h  PlaylistGenerator.cpp  PlaylistGenerator.h  PlaylistWorker.cpp  PlaylistWorker.h  ProcessDialog.cpp  ProcessDialog.h  (+7 more)
installer/: script.iss.in
rsc/: resources.qrc
